--- a/sql-library.html
+++ b/sql-library.html
@@ -27,6 +27,7 @@
 			<li id="launch_settings"><a href="#settings" data-toggle="tab">Settings</a></li>
 			<li id="launch_feedback"><a href="#feedback" data-toggle="tab">Feedback</a></li>
 			<li id="launch_docs"><a href="#docs" data-toggle="tab">Documentation</a></li>
+			<li id="launch_export"><a href="#export" data-toggle="tab">Export Data</a></li>
 		</ul>
 	</div>
 </template>
