--- a/sql-library.html
+++ b/sql-library.html
@@ -6,7 +6,7 @@
 	<div class="container-fluid">
 		{{> page_header}}	
 		<div class="row-fluid span12">
-			<div class="span2">
+			<div class="span1">
 				{{> side_bar}}				
 			</div>
 			<div id="main" class="span10">
@@ -17,13 +17,14 @@
 </body>
 
 <template name="side_bar">
-	<div class="tabbable tabs-left">
+	<div class="tabbable tabs-left affix">
 		<ul class="nav nav-tabs">
 			<li id="launch_build"><a href="#build" data-toggle="tab">Script Builder</a></li>
 			<li id="launch_search"><a href="#search"  data-toggle="tab">Search Metrics</a></li>
-			<li id="launch_explore"><a href="#explore" data-toggle="tab">Database Explorer</a></li>	
+			<li id="launch_explore"><a href="#explore" data-toggle="tab">DB Explorer</a></li>	
 			<li id="launch_create"><a href="#create"data-toggle="tab">Create Metric</a></li>				
 			<li id="launch_modify"><a href="#modify" data-toggle="tab">Modify Metric</a></li>	
+			<li id="launch_scripts"><a href="#modify" data-toggle="tab">My Scripts</a></li>
 			<li id="launch_settings"><a href="#settings" data-toggle="tab">Settings</a></li>
 			<li id="launch_feedback"><a href="#feedback" data-toggle="tab">Feedback</a></li>
 			<li id="launch_docs"><a href="#docs" data-toggle="tab">Documentation</a></li>
